--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Hello Gama Academy!</h1>
         <script src="script.js"></script>
+        <script src="classe.js"></script>
     </body>
 </html>
